Fix too long dates

--- a/css/events.css
+++ b/css/events.css
@@ -1,11 +1,12 @@
 .events__header {
   display: none;
-  grid-template-columns: 6.5rem auto 8rem;
+  grid-template-columns: 7rem auto 8rem;
   text-transform: uppercase;
   color: #A2A2A2;
   font-size: 0.7rem;
   font-weight: bold;
   padding: 0.5rem 2rem;
+  column-gap: 1rem;
 }
 .events__no-events {
   padding: 1rem;
@@ -64,7 +65,7 @@
       display: grid;
       align-items: center;
       padding: 0.5rem 0 0.5rem 2rem;
-      grid-template-columns: 6.5rem auto 8rem 2rem;
+      grid-template-columns: 7rem auto 8rem 2rem;
   }
   .event__datetime {
       display: block;
@@ -77,7 +78,7 @@
       padding-left: 0;
   }
   .event__title {
-      padding: 0 2rem 0 0;
+      padding: 0 1rem;
   }
   .event__delete {
       display: none;
